[project]
name = "multimodal-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.120.1",
    "fastmcp>=2.13.0.2",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "langchain>=1.0.2",
    "langchain-groq>=1.0.0",
    "langchain-mcp-adapters>=0.1.11",
    "langgraph>=1.0.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.11.0",
]
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
